added security swagger tags
